--- a/index.html
+++ b/index.html
@@ -889,16 +889,16 @@
   <script src="pages/js/debounce.factory.js"></script>
   <script src="pages/js/app.providers.spanavigation.js"></script>
   <script src="pages/js/init.service.js"></script>
-
+  <script src="pages/js/maps.layers.service.js"></script>
   <script src="pages/js/controllers/MainPageController.js"></script>
- <script src="pages/js/controllers/PedidosPageController.js"></script>
- <script src="pages/js/controllers/KDSMonitorPageController.js"></script>
- <script src="pages/js/controllers/ClientesPageController.js"></script>
- <script src="pages/js/controllers/ConfiguracoesPageController.js"></script>
- <script src="pages/js/controllers/DespachosPageController.js"></script>
- <script src="pages/js/controllers/EntregadoresPageController.js"></script>
- <script src="pages/js/controllers/RelatoriosPageController.js"></script>
- <script src="pages/js/controllers/UsuariosPageController.js"></script>
+  <script src="pages/js/controllers/PedidosPageController.js"></script>
+  <script src="pages/js/controllers/KDSMonitorPageController.js"></script>
+  <script src="pages/js/controllers/ClientesPageController.js"></script>
+  <script src="pages/js/controllers/ConfiguracoesPageController.js"></script>
+  <script src="pages/js/controllers/DespachosPageController.js"></script>
+  <script src="pages/js/controllers/EntregadoresPageController.js"></script>
+  <script src="pages/js/controllers/RelatoriosPageController.js"></script>
+  <script src="pages/js/controllers/UsuariosPageController.js"></script>
 
 </body>
 
